force-app/main/default/objects/Lead/fields/Preferred_Construction_Management_Co__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Construction_Management_Co__c</fullName>
    <description>Lender partnerships field</description>
    <label>Preferred Construction Management Co</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Land Gorilla</fullName>
            </value>
            <value>
                <fullName>Trinity</fullName>
            </value>
            <value>
                <fullName>BuildZig</fullName>
            </value>
            <value>
                <fullName>CSFI Loan Management</fullName>
            </value>
            <value>
                <fullName>Hasz Fund Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>