force-app/main/default/objects/Lead/fields/Principals__c.field-meta.xml
<CustomField>
    <fullName>Principals__c</fullName>
    <description>Principals w/ Ownership or Controlling Interest</description>
    <label>Principals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>