force-app/main/default/objects/Lead/fields/Projected_Next_12_Months_Value_of_Loans__c.field-meta.xml
<CustomField>
    <fullName>Projected_Next_12_Months_Value_of_Loans__c</fullName>
    <description>Lender partnerships field</description>
    <label>Projected Next 12 Months $ of Loans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>