force-app/main/default/objects/Lead/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Loan_Product_s__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2 Unit</fullName>
            </value>
            <value>
                <fullName>3 Unit</fullName>
            </value>
            <value>
                <fullName>4 Unit</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Mixed-Use</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Multifamily 20+ Units</fullName>
            </value>
            <value>
                <fullName>Multifamily 5-20 Units</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PUD</fullName>
            </value>
            <value>
                <fullName>SFR 1-4 Units</fullName>
            </value>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Townhome</fullName>
            </value>
            <value>
                <fullName>Vacation Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>