force-app/main/default/objects/Lead/fields/PropertyCity__c.field-meta.xml
<CustomField>
    <fullName>PropertyCity__c</fullName>
    <label>Property City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>