force-app/main/default/objects/Lead/fields/PropertyState__c.field-meta.xml
<CustomField>
    <fullName>PropertyState__c</fullName>
    <description>Property State Entered On Drift Chatbot Form.</description>
    <inlineHelpText>Property State Entered On Drift Chatbot Form.</inlineHelpText>
    <label>Property State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>