force-app/main/default/objects/Lead/fields/PropertyStreet__c.field-meta.xml
<CustomField>
    <fullName>PropertyStreet__c</fullName>
    <description>Property Street Address Entered On Drift Chatbot Form.</description>
    <inlineHelpText>Property Street Address Entered On Drift Chatbot Form.</inlineHelpText>
    <label>Property Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>