force-app/main/default/objects/Lead/fields/PropertyZip__c.field-meta.xml
<CustomField>
    <fullName>PropertyZip__c</fullName>
    <description>Property Zip Entered On Drift Chatbot Form.</description>
    <inlineHelpText>Property Zip Entered On Drift Chatbot Form.</inlineHelpText>
    <label>Property Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>