force-app/main/default/objects/Lead/fields/Rate_Range__c.field-meta.xml
<CustomField>
    <fullName>Rate_Range__c</fullName>
    <description>This is the estimated rate determined by the Lead Form creation system</description>
    <label>Rate Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>