force-app/main/default/objects/Lead/fields/Reassign_Lead__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign Lead</label>
    <type>Checkbox</type>
</CustomField>