force-app/main/default/objects/Lead/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referring Brokerage, Vendor or Client Account</description>
    <inlineHelpText>Referring Brokerage, Vendor or Client Account</inlineHelpText>
    <label>Referral Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>