force-app/main/default/objects/Lead/fields/Referral_Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the contact that referred this Lead</description>
    <inlineHelpText>Referring Broker, Vendor or Client Contact</inlineHelpText>
    <label>Referral Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>