force-app/main/default/objects/Lead/fields/Referring_URL__c.field-meta.xml
<CustomField>
    <fullName>Referring_URL__c</fullName>
    <label>Referring URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>