force-app/main/default/objects/Lead/fields/Referring_URL_Text__c.field-meta.xml
<CustomField>
    <fullName>Referring_URL_Text__c</fullName>
    <label>Referring URL Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>