force-app/main/default/objects/Lead/fields/Relationship_to_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Borrower__c</fullName>
    <label>Relationship to Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage Broker</fullName>
            </value>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Real Estate Broker</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>