force-app/main/default/objects/Lead/fields/Renovation_Budget__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Budget__c</fullName>
    <label>Renovation Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>