force-app/main/default/objects/Lead/fields/Renovation_Financing__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Financing__c</fullName>
    <inlineHelpText>Is the Borrower requesting Renovation Financing?</inlineHelpText>
    <label>Renovation Financing?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loan_Product_s__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Needed</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>None/Light</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>