force-app/main/default/objects/Lead/fields/Rental_Guidelines_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Guidelines_Approved_Date__c</fullName>
    <description>Date the Rental underwriting guidelines are approved</description>
    <inlineHelpText>Date the Rental underwriting guidelines are approved</inlineHelpText>
    <label>Rental - Guidelines Approved Date</label>
    <type>Date</type>
</CustomField>