force-app/main/default/objects/Lead/fields/Rental_Guidelines_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Guidelines_Received_Date__c</fullName>
    <description>Date the Rental underwriting guidelines are received</description>
    <inlineHelpText>Date the Rental underwriting guidelines are received</inlineHelpText>
    <label>Rental - Guidelines Received Date</label>
    <type>Date</type>
</CustomField>