force-app/main/default/objects/Lead/fields/Rental_Monthly_of_Volume__c.field-meta.xml
<CustomField>
    <fullName>Rental_Monthly_of_Volume__c</fullName>
    <formula>Rental_Monthly_Volume__c / Total_Monthly_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental - Monthly % of Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>