force-app/main/default/objects/Lead/fields/Rented__c.field-meta.xml
<CustomField>
    <fullName>Rented__c</fullName>
    <label>Rented</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>In the Near Future</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Soon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>