force-app/main/default/objects/Lead/fields/ringdna100__Last_Inbound_Call__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Last_Inbound_Call__c</fullName>
    <label>Last Inbound Call</label>
    <type>DateTime</type>
</CustomField>