force-app/main/default/objects/Lead/fields/RingDNA_Dispo__c.field-meta.xml
<CustomField>
    <fullName>RingDNA_Dispo__c</fullName>
    <label>RingDNA Dispo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>