force-app/main/default/objects/Lead/fields/Round_Robin_CX_Portal__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_CX_Portal__c</fullName>
    <description>This picklist is used to assist our Round Robin app to assign a specific set of users, RR requires a picklist field.</description>
    <inlineHelpText>This picklist is used to assist our Round Robin app to assign a specific set of users, RR requires a picklist field.</inlineHelpText>
    <label>Round Robin CX Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>