force-app/main/default/objects/Lead/fields/Round_Robin_Value__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Value__c</fullName>
    <label>Round Robin Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>