force-app/main/default/objects/Lead/fields/scanbizcards__ScanBizCards__c.field-meta.xml
<CustomField>
    <fullName>scanbizcards__ScanBizCards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Lead was created by the ScanBizCards app.</description>
    <inlineHelpText>Indicates whether this Lead was created by the ScanBizCards app.</inlineHelpText>
    <label>ScanBizCards</label>
    <type>Checkbox</type>
</CustomField>