force-app/main/default/objects/Lead/fields/Status_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Changed__c</fullName>
    <description>This is the date that the Status was last changed</description>
    <inlineHelpText>This is the date that the Status was last changed</inlineHelpText>
    <label>Status Last Changed</label>
    <type>Date</type>
</CustomField>