force-app/main/default/objects/Lead/fields/Strategic_Top_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Top_Account__c</fullName>
    <description>Designates an account as a Top Account or Strategic Account.</description>
    <label>Strategic Top Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top Account</fullName>
            </value>
            <value>
                <fullName>Strategic Account 2018</fullName>
            </value>
            <value>
                <fullName>Strategic Account 2019</fullName>
            </value>
            <value>
                <fullName>Strategic Account 2020</fullName>
            </value>
            <value>
                <fullName>Strategic Account 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>