force-app/main/default/objects/Lead/fields/Submitted_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Application_Date__c</fullName>
    <description>Date when lender application was submitted.</description>
    <label>Submitted Application Date</label>
    <type>Date</type>
</CustomField>