force-app/main/default/objects/Lead/fields/Time_From_Assign_To_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Time_From_Assign_To_Status_Change__c</fullName>
    <formula>(DateTime_Status_Changed_From_Open__c - DateTime_Originator_Assigned__c )*24*60</formula>
    <label>Time From Assign To Status Change (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>