force-app/main/default/objects/Lead/fields/Time_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Convert__c</fullName>
    <description>Time from CreatedDate to ConvertedDate</description>
    <formula>IF(
   Converted_Date_Time__c  -   CreatedDate   &gt; 0 ,
  TEXT( FLOOR( Converted_Date_Time__c  -   CreatedDate) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (Converted_Date_Time__c  -   CreatedDate) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (Converted_Date_Time__c  -   CreatedDate) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Convert</label>
    <type>Text</type>
</CustomField>