force-app/main/default/objects/Lead/fields/Top_Accounts_Imported_Leads_List__c.field-meta.xml
<CustomField>
    <fullName>Top_Accounts_Imported_Leads_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for the Lead Gen DB Project</inlineHelpText>
    <label>Top Accounts - Imported Leads List</label>
    <type>Checkbox</type>
</CustomField>