force-app/main/default/objects/Lead/fields/Total_Properties__c.field-meta.xml
<CustomField>
    <fullName>Total_Properties__c</fullName>
    <description>Investor Experience</description>
    <inlineHelpText>Investor Experience</inlineHelpText>
    <label>Total Properties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>