force-app/main/default/objects/Lead/fields/Tracking_ID_1__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID_1__c</fullName>
    <description>Allows user input of an Alpha numeric number</description>
    <label>Tracking ID 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>