force-app/main/default/objects/Lead/fields/Tracking_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID_2__c</fullName>
    <label>Tracking ID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>