force-app/main/default/objects/Lead/fields/Trailing_12_Months_of_Loans__c.field-meta.xml
<CustomField>
    <fullName>Trailing_12_Months_of_Loans__c</fullName>
    <description>Lender partnerships field</description>
    <label>Trailing 12 Months # of Loans</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>