force-app/main/default/objects/Lead/fields/True_source__c.field-meta.xml
<CustomField>
    <fullName>True_source__c</fullName>
    <defaultValue>true</defaultValue>
    <label>True source</label>
    <type>Checkbox</type>
</CustomField>