force-app/main/default/objects/Lead/fields/Updated_By_CTM__c.field-meta.xml
<CustomField>
    <fullName>Updated_By_CTM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used To Verify If Lead Data Was Updated By CTM.</description>
    <inlineHelpText>Used To Verify If Lead Data Was Updated By CTM.</inlineHelpText>
    <label>Updated By CTM</label>
    <type>Checkbox</type>
</CustomField>