force-app/main/default/objects/Lead/fields/Updated_Referrer_by_CTM__c.field-meta.xml
<CustomField>
    <fullName>Updated_Referrer_by_CTM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Referrer by CTM</label>
    <type>Checkbox</type>
</CustomField>