force-app/main/default/objects/Lead/fields/utm_Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>utm_Campaign_Medium__c</fullName>
    <label>utm Campaign Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>