force-app/main/default/objects/Lead/fields/utm_Campaign_Source_picklist__c.field-meta.xml
<CustomField>
    <fullName>utm_Campaign_Source_picklist__c</fullName>
    <description>This field is used for the Lead Assignment rule</description>
    <label>utm Campaign Source picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>reconrealty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>