force-app/main/default/objects/Lead/fields/Warehouse_Lender__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Lender__c</fullName>
    <description>Lender partnership field</description>
    <label>Warehouse Lender</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Bank of California</fullName>
            </value>
            <value>
                <fullName>Axos Bank</fullName>
            </value>
            <value>
                <fullName>Churchill</fullName>
            </value>
            <value>
                <fullName>Western Alliance</fullName>
            </value>
            <value>
                <fullName>Cross River</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>