force-app/main/default/objects/Lead/recordTypes/Borrower_Lead.recordType-meta.xml
<RecordType>
    <fullName>Borrower_Lead</fullName>
    <active>true</active>
    <businessProcess>Leads</businessProcess>
    <label>Borrower Lead</label>
</RecordType>