force-app/main/default/objects/Lead/recordTypes/Broker_Lead.recordType-meta.xml
<RecordType>
    <fullName>Broker_Lead</fullName>
    <active>true</active>
    <businessProcess>Leads</businessProcess>
    <label>Broker Lead</label>
</RecordType>