force-app/main/default/objects/Lead/recordTypes/Lead_Gen_DB.recordType-meta.xml
<RecordType>
    <fullName>Lead_Gen_DB</fullName>
    <active>false</active>
    <businessProcess>Leads</businessProcess>
    <description>Used Only for Top Accounts Lead Generation Database and Top 10 Competitor Targets</description>
    <label>Lead Gen DB</label>
</RecordType>