force-app/main/default/objects/Lead/recordTypes/Lender_Lead.recordType-meta.xml
<RecordType>
    <fullName>Lender_Lead</fullName>
    <active>true</active>
    <businessProcess>Leads</businessProcess>
    <label>Lender Lead</label>
</RecordType>