force-app/main/default/objects/Lead/validationRules/disposition_required.validationRule-meta.xml
<ValidationRule>
    <fullName>disposition_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Disposition__c, &quot;&quot;),
ispickval(Status, &apos;Unqualified&apos;)
)</errorConditionFormula>
    <errorDisplayField>Disposition__c</errorDisplayField>
    <errorMessage>Please fill out the Disposition field.</errorMessage>
</ValidationRule>