force-app/main/default/objects/Lead/validationRules/Foreign_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Foreign_Country</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;Qualified&apos;),
ISPICKVAL(Foreign_National_picklist__c, &quot;Yes&quot;),
ISPICKVAL(Country__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Please Select a Country.</errorMessage>
</ValidationRule>