force-app/main/default/objects/Lead/validationRules/Prevent_House_Account_Owning_Open_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_House_Account_Owning_Open_Leads</fullName>
    <active>true</active>
    <description>This will prevent users from being able to move Open/Contacted Leads to the House Account</description>
    <errorConditionFormula>AND(
OR(
 ISPICKVAL( Status , &quot;Open&quot;) ,
 ISPICKVAL( Status , &quot;Contacted&quot;)) ,
 Owner_Name__c = &quot;House Account&quot;,
NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>House Account cannot own Open/Contacted Leads.  House Account can only own Unresponsive or Unqualified Leads.</errorMessage>
</ValidationRule>